Structural validation - work in progress